# pipetory

./: Makefile  pyproject.toml
examples/: numpy_example.py  pandas.py  pandas_example.py
pipetory/: __init__.py  factory.py
pipetory/exceptions/: steps.py
pipetory/pipes/: base.py  components.py  sequence.py
pipetory/types/: data.py  dataset.py  exceptions.py  functions.py  pipes.py
