[tool.poetry]
name = "pipetory"
version = "0.1.0"
description = "Package to easily build and compose data pipelines with several backends"
authors = ["Juan Lara <julara@unal.edu.co>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
pandas = "^1.4.1"
dask = {extras = ["distributed"], version = "^2022.3.0", optional = true}
ray = {version = "^1.11.0", optional = true}
modin = {version = "^0.13.3", optional = true}
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
ipython = "^8.1.1"
neovim = "^0.3.1"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

