[tool.poetry]
name = "pipetory"
version = "0.1.0"
description = "Package to easily build and compose pipelines with several backends"
authors = ["Juan Lara <julara@unal.edu.co>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = {version = "^1.22.3", optional = true}
pandas = {version = "^1.4.1", optional = true}

[tool.poetry.dev-dependencies]
ipython = "^8.1.1"
neovim = "^0.3.1"
pytest = "^7.1.1"
numpy = "^1.22.3"
pandas = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

